--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+.env
+
+# firebase
+firebase-debug.log
+firebase-debug.*.log
+firebase.json
+.firebaserc
+firestore.indexes.json
+firestore.rules
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
