--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,22 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "es6": true
+  },
+  "extends": "next/core-web-vitals",
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "plugins": [
+    "simple-import-sort"
+  ],
+  "rules": {
+    "quotes": [2, "double", { "avoidEscape": true }],
+    "jsx-quotes": ["error", "prefer-double"],
+    "semi": ["error", "always"],
+    "import/first": "error",
+    "import/newline-after-import": "error",
+    "import/no-duplicates": "error",
+    "simple-import-sort/exports": "error",
+    "simple-import-sort/imports": "error"
+  }
 }
