--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "next build && firebase deploy --only hosting"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.14.10",
     "firebase": "^10.4.0",
     "firebase-tools": "^12.5.4",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-hook-form": "^7.46.2"
+    "react-hook-form": "^7.46.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "latest",
@@ -26,6 +30,7 @@
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "postcss": "latest",
     "tailwindcss": "latest",
     "typescript": "latest"
