--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.14.10",
+    "@mui/x-date-pickers": "^6.15.0",
+    "dayjs": "^1.11.10",
     "firebase": "^10.4.0",
     "firebase-tools": "^12.5.4",
     "next": "latest",
