--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.14.10",
     "@mui/x-date-pickers": "^6.15.0",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "firebase": "^10.4.0",
     "firebase-tools": "^12.5.4",
