--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.4.0",
     "firebase-tools": "^12.5.4",
     "next": "latest",
+    "next-pwa": "^5.6.0",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.46.2",
