--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && firebase deploy --only hosting"
+    "deploy": "next build && firebase deploy --only hosting",
+    "debug": "node --inspect=0.0.0.0:9229 node_modules/next/dist/bin/next"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
